--- a/geminiCD.ipynb
+++ b/geminiCD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPEEjvGt5UkH/8uBfHvhQ2",
+      "authorship_tag": "ABX9TyMouQI0qY1wrF4JG7r77u7h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,15 +36,24 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "paso 1"
+      ],
+      "metadata": {
+        "id": "kcVL1_37xSwv"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 831
         },
         "id": "_OF9LEjKfzcT",
-        "outputId": "5399d92d-6c22-4251-c368-5e9bc56c1d0b"
+        "outputId": "4371a3b4-2335-4cda-bb66-80dea11df5bc"
       },
       "outputs": [
         {
@@ -112,6 +121,78 @@
         "plt.show()\n",
         "\n",
         "print(\"FINALIZADO\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "paso 2"
+      ],
+      "metadata": {
+        "id": "G6CoUQcDxb6d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# con el df anterior, vamos a comvertir tiempo a formato real de python\n",
+        "query_v2 = \"\"\"\n",
+        "SELECT\n",
+        "    start_time, duration_minutes, subscriber_type\n",
+        "FROM `bigquery-public-data.austin_bikeshare.bikeshare_trips`\n",
+        "WHERE start_time IS NOT NULL\n",
+        "LIMIT 5000\n",
+        "\"\"\"\n",
+        "print(\"consulta exitosa\")\n",
+        "\n",
+        "df_v2 = client.query(query_v2).to_dataframe()\n",
+        "df_v2['dia de semana'] = df_v2['start_time'].dt.day_name()\n",
+        "df_v2['es_fin_de_semana'] = df_v2['start_time'].dt.dayofweek >= 5\n",
+        "print(\"creacion de nuevas columnas exitosa\")\n",
+        "print(df_v2.head())\n",
+        "analisis = df_v2.groupby('es_fin_de_semana')['duration_minutes'].mean()\n",
+        "print(\"duracion promedio (minutos): \")\n",
+        "print(analisis)\n",
+        "print(\"analisis exitoso\")\n",
+        "print(\"FINALIZADO\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s-yb6MIQxdjD",
+        "outputId": "7e1fcbad-01d5-4dec-b1ed-597c3113d489"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "consulta exitosa\n",
+            "creacion de nuevas columnas exitosa\n",
+            "                 start_time  duration_minutes  subscriber_type dia de semana  \\\n",
+            "0 2022-05-06 14:19:39+00:00               195  Pay-as-you-ride        Friday   \n",
+            "1 2022-05-23 16:24:46+00:00                 2  3-Day Weekender        Monday   \n",
+            "2 2022-05-06 14:37:41+00:00               178  Pay-as-you-ride        Friday   \n",
+            "3 2022-05-17 22:50:29+00:00                 4          Local31       Tuesday   \n",
+            "4 2022-05-29 19:41:40+00:00                31  Pay-as-you-ride        Sunday   \n",
+            "\n",
+            "   es_fin_de_semana  \n",
+            "0             False  \n",
+            "1             False  \n",
+            "2             False  \n",
+            "3             False  \n",
+            "4              True  \n",
+            "duracion promedio (minutos): \n",
+            "es_fin_de_semana\n",
+            "False    37.080434\n",
+            "True       47.3594\n",
+            "Name: duration_minutes, dtype: Float64\n",
+            "analisis exitoso\n",
+            "FINALIZADO\n"
+          ]
+        }
       ]
     }
   ]
